2014-10-10
1.把version字段放在基类里了。这样就全部都可以直接使用了。并且给updateat,createat,version加了默认值，主要是在admin时自动有值。

2014-07-30
1.flask-admin 1.0.8 之后似乎可以one-to-one了，两边都显示了下拉，而不是之前的一边下列一边多选。

2014-07-09
1.在macros里增加了render_form。这样就可以直接渲染表单了。
2.增加日期控件，请参考http://www.bootcss.com/p/bootstrap-datetimepicker/demo.htm
3.另外momentjs,datetimepicker,babel的zh都有不一样的表示。。比较讨厌。所以我改了datetimepicker的zh-CN为zh-cn，以和momentjs一样。
4.把datetimepicker的js代码单独放在macros里了

2014-07-08
1.增加了语言切换功能，主要是切换en/zh，momentjs和bybabel的分开存放在session中。
2.更新了翻译。

2014-07-07
1.更新了alembic，不然不可能删除mysql的unique的约束。
2.在core的new方法里判断id并去掉。id为0的情况会使得返回的model不可访问。创建新的实体不应用有id.
3.增加工作模块。

2014-06-20
1.fix:翻译会被空格截断的问题：原来是缺少了引用号~在大括号上再加一次引用就好了。

2014-06-19
1.增加一个字段用来记录头像图片地址。目前只用在qq登陆时。

2014-06-18
1.增加功能：使用QQ登陆后返回原地址。
2.增加功能：绑定是否提醒

2014-06-13
1.增加验证码：在core中自动去除验证码，方便使用**form.data。使用时间来加入验证请求，以使得请求重发。

2014-06-10
1.增加了jinja2模板控制能力，包括has_role, has_right。
2.blog的功能进行了权限的控制。

2014-06-09
1.增加了权限控制RightNeed,和相应的decorator,同时对方法的命名有了一定的约束。
2.增加了App, Right Model对应的管理view。

2014-05-30
1.增加blog
2.为json的返回提供了depth参数，用来指定返回的深度层次。
3.另外提供__json_no_depth_limit__来让一些想不受深度影响的字段提供解决方法。
4.重新对route的定义作处理，使可以接受多个url。
5.增加在frontend返回json的处理。
6.统一了alert为bootstrap的modal。
7.增加了对jquery.ajax的postJSONEx,getJSONEx的封装。
8.引入了ckeditor。
9.在service里增加了get_page_filterby和get_latest_page_filtertby。
10.为model增加update_at, create_at, version等基本字段用来记录字段的变动。其中create_at有default值处理，update_at有事件处理，version由sqlalchemy的version_id处理。
11.navbar只有在中间有内容了，变窄了。

2014-04-24
1.把flask-sqlalchemy的init方法设置autoflush为true，不然factoryboy里得不到数据。后续等到flask-sqlalchemy 2.0发布了就是默认值了，再进行更新。
2.引入factoryboy

2014-04-22
1.增加sqlalchemy-migrate，最好只限定在增减字段和模型上。

2014-04-21
1.QQ登陆支持。登陆可绑定原有帐号。

2014-03-28
1.bug-fix:新注册用户总是会让列表失效
2.bug-nofix:注册成功后重定向位置
3.增加邮件发送功能，使用gmail或者kinorsi

2014-3-14
1.错误处理500的地方加上回滚
2.修改changelog的位置

2014-3-7
1.增加部门名称的查找

2014-03-06
1.pager抽离成macro了

2014-03-05
1.由于emial没有用到，但是wtforms提交的时候会把空字符串填上，所以就把email给了个初始值了。

2014-03-04
1.增加一些图标
2.初始了用户数据
3.加入了wsgi_mod相关的application文件

2014-03-03