@@ -30,6 +30,11 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
+		{{_('Price')}}{{_(': ')}}{{carinfo.price}}
+		</div>
+	</div>	
+	<div class="row">
+		<div class="col-md-12">
 		{{_('Send out time')}}{{_(': ')}}{{carinfo.start_time}}
 		</div>
 	</div>
